# FabricScope

./: LIVE_RUNBOOK.md  Makefile  PROJECT_BRIEF.md  README.md  pyproject.toml
dashboards/: fabricscope_grafana.json
data/: sample_fabric_events.csv  sample_runtime_trace.csv
docs/: architecture.md  failure-modes.md
fabricscope/: __init__.py  analyzer.py  cli.py  exporter.py  live_capture.py  models.py  runtime_compare.py
graphify-out/: GRAPH_REPORT.md  graph.json
probes/: rdma_latency.bt  tcp_handshake.bt  tcp_retrans.bt
results/: metrics.prom
scripts/: run_bpftrace_live.sh
tests/: test_analyzer.py  test_exporter.py
