[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricscope"
version = "0.1.0"
description = "Observability toolkit for ML fabric congestion and retransmission analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fabricscope = "fabricscope.cli:main"

[tool.setuptools]
packages = ["fabricscope"]

